build_brick_fix.txt
gcc -Iinclude -Wall -O2 -I/usr/include/SDL2 -c -o src/main.o src/main.c
src/main.c: In function ‘main’:
src/main.c:621:12: warning: statement with no effect [-Wunused-value]
  621 |  Broadway: 1698
      |            ^~~~
src/main.c:621:16: error: expected ‘;’ before ‘render_footer’
  621 |  Broadway: 1698
      |                ^
      |                ;
  622 |             render_footer(renderer);
      |             ~~~~~~~~~~~~~
src/main.c:621:2: warning: label ‘Broadway’ defined but not used [-Wunused-label]
  621 |  Broadway: 1698
      |  ^~~~~~~~
src/main.c:495:5: warning: ignoring return value of ‘freopen’, declared with attribute warn_unused_result [-Wunused-result]
  495 |     freopen("error.log", "w", stderr);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:35: src/main.o] Error 1
